tests/fixtures/status_cond.stderr
Error in tests/fixtures/status_cond.sh2:2:5
