tests/fixtures/status_cond.sh2
func main() {
    run("bash", "-c", "exit 7")
    if status() == 7 {
        print("ok")
    } else {
        print("bad")
    }
}
